--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/ScanningPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/ScanningPage.xaml
@@ -32,7 +32,7 @@
                                 Text="Последнее сканирование было произведено:"
                                 Margin="0 0 3.5 0"/>
                             <TextBlock
-                                Style="{DynamicResource MainStyleTextBlock}"
+                                Style="{DynamicResource OtherStyleTextBlock}"
                                 Text="15/02/2023 16:50"
                                 Margin="3.5 0 0 0"/>
                         </StackPanel>
@@ -42,9 +42,16 @@
                                 Text="Результат сканирования:"
                                 Margin="0 0 2 0"/>
                             <TextBlock
-                                Style="{DynamicResource MainStyleTextBlock}"
+                                Style="{DynamicResource OtherStyleTextBlock}"
                                 Text="Отлично"
-                                Margin="2 0 0 0"/>
+                                Margin="2 0 0 0">
+                                <TextBlock.Foreground>
+                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                        <GradientStop Color="#00b59c"/>
+                                        <GradientStop Color="#9CFFAC" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </TextBlock.Foreground>
+                            </TextBlock>
                         </StackPanel>
                         <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
                             <TextBlock
@@ -52,7 +59,7 @@
                                 Text="Кем сканировалось:"
                                 Margin="0 0 2 0"/>
                             <TextBlock
-                                Style="{DynamicResource MainStyleTextBlock}"
+                                Style="{DynamicResource OtherStyleTextBlock}"
                                 Text="Error404 Error404 Error404 (Admin)"
                                 Margin="2 0 0 0"/>
                         </StackPanel>
@@ -62,7 +69,7 @@
                                 Text="Продолжительность сканирования:"
                                 Margin="0 0 2 0"/>
                             <TextBlock
-                                Style="{DynamicResource MainStyleTextBlock}"
+                                Style="{DynamicResource OtherStyleTextBlock}"
                                 Text="13:42"
                                 Margin="2 0 0 0"/>
                         </StackPanel>
@@ -72,7 +79,7 @@
                                 Text="Сканирование:"
                                 Margin="0 0 2 0"/>
                             <TextBlock
-                                Style="{DynamicResource MainStyleTextBlock}"
+                                Style="{DynamicResource OtherStyleTextBlock}"
                                 Text="134\134"
                                 Margin="2 0 0 0"/>
                         </StackPanel>
@@ -94,9 +101,15 @@
                         Margin="0 10 0 10"/>
                     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                         <TextBlock
-                            Foreground="#9a9a9a"
                             Style="{DynamicResource MainStyleTextBlock}"
-                            Text="Ошибок не найдено"/>
+                            Text="Ошибок не найдено">
+                            <TextBlock.Foreground>
+                                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                    <GradientStop Color="#00b59c"/>
+                                    <GradientStop Color="#9CFFAC" Offset="1"/>
+                                </LinearGradientBrush>
+                            </TextBlock.Foreground>
+                        </TextBlock>
                     </StackPanel>
                 </StackPanel>
             </Border>
