--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/ScanningPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/ScanningPage.xaml
@@ -33,7 +33,13 @@
                                 Margin="0 0 3.5 0"/>
                             <TextBlock
                                 Style="{DynamicResource OtherStyleTextBlock}"
-                                Text="15/02/2023 16:50"
+                                x:Name="WhomCheckedTextBlock"
+                                Margin="3.5 0 0 0"/>
+                            <TextBlock
+                                Text="..."
+                                Visibility="Collapsed"
+                                Style="{DynamicResource OtherStyleTextBlock}"
+                                x:Name="WhomCheckedTextBlock2"
                                 Margin="3.5 0 0 0"/>
                         </StackPanel>
                         <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
@@ -44,6 +50,7 @@
                             <TextBlock
                                 Style="{DynamicResource OtherStyleTextBlock}"
                                 Text="Отлично"
+                                x:Name="ResultScanTextBlock"
                                 Margin="2 0 0 0">
                                 <TextBlock.Foreground>
                                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -52,6 +59,12 @@
                                     </LinearGradientBrush>
                                 </TextBlock.Foreground>
                             </TextBlock>
+                            <TextBlock
+                                Visibility="Collapsed"
+                                Style="{DynamicResource OtherStyleTextBlock}"
+                                Text="..."
+                                x:Name="ResultScanTextBlock2"
+                                Margin="2 0 0 0"/>
                         </StackPanel>
                         <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
                             <TextBlock
@@ -60,7 +73,13 @@
                                 Margin="0 0 2 0"/>
                             <TextBlock
                                 Style="{DynamicResource OtherStyleTextBlock}"
-                                Text="Error404 Error404 Error404 (Admin)"
+                                x:Name="WhenCheckedTextBlock"
+                                Margin="2 0 0 0"/>
+                            <TextBlock
+                                Text="..."
+                                Visibility="Collapsed"
+                                Style="{DynamicResource OtherStyleTextBlock}"
+                                x:Name="WhenCheckedTextBlock2"
                                 Margin="2 0 0 0"/>
                         </StackPanel>
                         <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
@@ -70,7 +89,13 @@
                                 Margin="0 0 2 0"/>
                             <TextBlock
                                 Style="{DynamicResource OtherStyleTextBlock}"
-                                Text="13:42"
+                                x:Name="DurationScanTextBlock"
+                                Margin="2 0 0 0"/>
+                            <TextBlock
+                                Text="..."
+                                Visibility="Collapsed"
+                                Style="{DynamicResource OtherStyleTextBlock}"
+                                x:Name="DurationScanTextBlock2"
                                 Margin="2 0 0 0"/>
                         </StackPanel>
                         <StackPanel Margin="0 3.5 0 0" Style="{DynamicResource HorizontalDataStackPanel}">
@@ -80,8 +105,13 @@
                                 Margin="0 0 2 0"/>
                             <TextBlock
                                 Style="{DynamicResource OtherStyleTextBlock}"
-                                Text="134\134"
-                                Margin="2 0 0 0"/>
+                                Margin="2 0 0 0">
+                                <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
+                                    <TextBlock x:Name="FilesAtTimeScanningTextBlock" Text="591"/>
+                                    <TextBlock Text=" / "/>
+                                    <TextBlock Text="591"/>
+                                </StackPanel>
+                            </TextBlock>
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
@@ -101,6 +131,7 @@
                         Margin="0 10 0 10"/>
                     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10" Style="{DynamicResource TextBlockDominatesTextBoxStackPanel}">
                         <TextBlock
+                            x:Name="TitleErrorTextBlock"
                             Style="{DynamicResource MainStyleTextBlock}"
                             Text="Ошибок не найдено">
                             <TextBlock.Foreground>
@@ -110,6 +141,11 @@
                                 </LinearGradientBrush>
                             </TextBlock.Foreground>
                         </TextBlock>
+                        <TextBlock
+                            Visibility="Collapsed"
+                            x:Name="TitleErrorTextBlock2"
+                            Style="{DynamicResource OtherStyleTextBlock}"
+                            Text="Поиск ошибок"/>
                     </StackPanel>
                 </StackPanel>
             </Border>
