Изменил немного код во всех окнах для более правильной работы "чтоб приложение не вылетало, а обрабатывала ошибку"

--- a/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
@@ -6,8 +6,9 @@
     
     <Style x:Key="MainBorderStyle" TargetType="Border">
         <Setter Property="Background" Value="#121212"/>
+        <Setter Property="BorderBrush" Value="#2a2a2a"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
-        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="CornerRadius" Value="10"/>
     </Style>
     
