--- a/DesctopHITE/PerformanceFolder/WindowsFolder/ViewEditInfoemationWorkerWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/ViewEditInfoemationWorkerWindow.xaml
@@ -9,7 +9,7 @@
     Width="1323"
     WindowStartupLocation="CenterScreen"
     Style="{StaticResource MainWinwosStyle}">
-    <Border BorderBrush="#2a2a2a" BorderThickness="1" Style="{DynamicResource MainBorderStyle}">
+    <Border Style="{DynamicResource MainBorderStyle}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
