--- a/DesctopHITE/AppDateFolder/StyleFolder/PageDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/PageDictionary.xaml
@@ -4,9 +4,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
-    <Style x:Key="MenuUserPageStyle" TargetType="Page"> <!--Меню слева-->
+    <Style x:Key="MenuUserPageStyle" TargetType="Page"> <!--Меню слева у пользователя-->
         <Setter Property="Width" Value="279"/>
         <Setter Property="Height" Value="870"/>
+    </Style>
+    <Style x:Key="MenuCashPageStyle" TargetType="Page"><!--Меню слева у кассы-->
+        <Setter Property="Width" Value="500"/>
+        <Setter Property="Height" Value="1078"/>
     </Style>
     <Style x:Key="MainUserPageStyle" TargetType="Page"> <!--Пространство взаимодействия-->
         <Setter Property="Width" Value="1321"/>
