--- a/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
@@ -234,6 +234,14 @@
                                         Margin="0 0 2 0"/>
                                 </Grid>
                             </Button>
+                            <Button
+                                Content="123"
+                                HorizontalAlignment="Right"
+                                Height="30"
+                                Width="80"
+                                x:Name="TestButton"
+                                Click="TestButton_Click"
+                                Style="{DynamicResource OtherButtonStyle}"/>
                         </Grid>
                     </StackPanel>
                 </Grid>
