--- a/DesctopHITE/PerformanceFolder/PageFolder/PanelMenuFolder/MenuCashPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/PanelMenuFolder/MenuCashPage.xaml
@@ -1,22 +1,23 @@
 ﻿<Page 
     x:Class="DesctopHITE.PerformanceFolder.PageFolder.PanelMenuFolder.MenuCashPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      mc:Ignorable="d" 
-      Style="{StaticResource MenuCashPageStyle}">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    IsVisibleChanged="Page_IsVisibleChanged"
+    xmlns:UserControl ="clr-namespace:DesctopHITE.PerformanceFolder.UserControlFolder"
+    mc:Ignorable="d" 
+    Style="{StaticResource MenuCashPageStyle}">
     <StackPanel Style="{DynamicResource MainMenuStackPanelStyle}">
         <ListView
-            SelectionChanged="ListWorkerListView_SelectionChanged"
+            Style="{DynamicResource MenuCashListView}"
+            SelectionChanged="ListMenuListView_SelectionChanged"
             x:Name="ListMenuListView"
             Margin="0"
             ItemContainerStyle="{StaticResource MenuCashItemSelected}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
-
-                    </Grid>
+                    <UserControl:MenuCashControl/>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
