--- a/DesctopHITE/AppDateFolder/StyleFolder/ListViewDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/ListViewDictionary.xaml
@@ -22,7 +22,7 @@
     </Style>
 
     <Style x:Key="ListViewItemSelected" TargetType="ListViewItem">
-        <Setter Property="Margin" Value="5 10 5 10"/>
+        <Setter Property="Margin" Value="3.5"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Template">
             <Setter.Value>
